--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
         working-directory: terraform
         run: terraform init
 
-      - name: Apply Terraform
+      # - name: Apply Terraform
+      #   working-directory: terraform
+      #   run: terraform apply -auto-approve
+      - name: Terraform Destroy
         working-directory: terraform
-        run: terraform apply -auto-approve
+        run: terraform destroy -auto-approve
