--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.6.6
+      # - name: Setup Terraform
+      #   uses: hashicorp/setup-terraform@v2
+      #   with:
+      #     terraform_version: 1.6.6
 
-      - name: Initialize Terraform
-        working-directory: terraform
-        run: terraform init
+      # - name: Initialize Terraform
+      #   working-directory: terraform
+      #   run: terraform init
 
       # - name: Apply Terraform
       #   working-directory: terraform
